nonPH_analysis/CCA/stability_testing/logs/stbl_summ803086.err
  File "/scratch/tyoeasley/brain_representations/src_py/pull_cancorrs.py", line 39
    for i in range(len(reg_val))])
      ^
SyntaxError: invalid syntax
